--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://banner2.cleanpng.com/20180517/qpe/kisspng-computer-icons-icon-design-photography-clip-art-best-seller-5afd5a0c746ee8.9375880015265531004769.jpg" />
+    <!-- <link rel="icon" href="https://banner2.cleanpng.com/20180517/qpe/kisspng-computer-icons-icon-design-photography-clip-art-best-seller-5afd5a0c746ee8.9375880015265531004769.jpg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
